<resources>
    <string name="app_name">Offloading Demo</string>
    <string name="btn_ranging">WiFi\nRanging</string>
    <string name="btn_setbytes">Set\nBytes</string>
    <string name="btn_setrepeat">Set\nRepeats</string>
    <string name="btn_setuptcpdump">Setup\nTCPDump</string>
    <string name="btn_setothers">Misc.</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_beginrx">Start RX</string>
    <string name="btn_begintx">Start TX</string>
    <string name="warn_root">Not rooted!! Must be rooted!</string>
    <string name="stat_wifion">WiFi is ON!\n</string>
    <string name="stat_wifioff">WiFi is NOT On!\n</string>
    <string name="txt_silentsu">Remember to silent SuperUser</string>
    <string name="txt_created_bigfile">Created a 2GB big file</string>
    <string name="txt_go">Go!</string>
    <string name="txt_continue">Continue</string>
    <string name="err_writepermission">Error: cannot write to external storage.</string>
    <string name="err_mkdir_failed">Error: cannot create folder!!!</string>
    <string name="err_filecheck_failed">Failed to find following files:\n</string>
    <string name="err_no_selection">Nothing is selected</string>
    <string name="err_unimplemented">Not implemented yet</string>
</resources>
