<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/container">


        <LinearLayout
            android:id="@+id/container_txrx"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:theme="@style/theme_btn_tx"
                android:id="@+id/btn_startTransmit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/btn_begintx"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#FFFFFF"/>

            <Button
                android:theme="@style/theme_btn_rx"
                android:id="@+id/btn_startReceive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/btn_beginrx"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#FFFFFF"/>

            <Button
                android:theme="@style/theme_btn_bg"
                android:id="@+id/btn_measureBg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Get BG"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#FFFFFF"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_target_ipmac"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="IP:"
                android:gravity="center"
                android:textSize="16dp"/>

            <EditText
                android:id="@+id/remote_ip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="Remote IP"
                android:text="192.168.2.1"
                android:inputType="text"
                android:textSize="16dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="MAC:"
                android:gravity="center"
                android:textSize="16dp"/>

            <EditText
                android:id="@+id/remote_mac"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="Remote MAC"
                android:text="4e:32:75:f8:7e:64"
                android:inputType="text"
                android:textSize="16dp"/>

        </LinearLayout>
        <!--<HorizontalScrollView-->
            <!--android:id="@+id/container_config"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="0.8">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_setByte2send"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn_setbytes"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/btn_setRepeatTimes"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/btn_setrepeat"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/btn_setTCPDumpInterface"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/btn_setuptcpdump"
                    android:textSize="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_setLogFreq"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="Set\nLog Freq"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/btn_setOthers"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/btn_setothers"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/btn_clearStatus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/btn_clear"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/btn_ranging"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/btn_ranging"
                    android:textSize="16dp"/>
            </LinearLayout>

        <!--</HorizontalScrollView>-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_results"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text=""
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/indiego"/>

            </LinearLayout>
        </ScrollView>
</LinearLayout>
